Feat send event notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">EventCademy</string>
+
+    <string name="default_notification_channel_id">default_channel</string>
+    <string name="default_notification_channel_name">Default</string>
+    <string name="default_notification_channel_description">Default Channel</string>
+
 </resources>
